--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -1,38 +1,6 @@
 ---
 # tasks file for site
 
-- name: Copy file from /etc/tvault-config/tvault-config.conf
-  copy:
-    src: /etc/tvault-config/tvault-config.conf
-    dest: /etc/
-  tags: daemon
-
-- name: Read file
-  shell: cat /etc/tvault-config.conf
-  args:
-    chdir: /etc/
-  register: config_status
-  tags: daemon
-
-- name: Successful tvm config
-  debug: msg="TVM is configured successfully"
-  when: config_status.stdout is search('configured')
-  tags: daemon
-
-- name: Check status of tvm config
-  fail:
-    msg: TVM is not configured successfully
-  when: '"configured" not in config_status.stdout'
-  tags: daemon 
-
-- name: Remove file from host
-  file:
-    path: /etc/tvault-config.conf
-    state: absent
-  tags: daemon
-
-
-
 - name: Read variables from triliovault-nodes file
   include_vars: /etc/ansible/group_vars/triliovault-nodes
   tags:
@@ -62,6 +30,27 @@
   command: yum info ovirt-imageio-daemon
   register: daemon_version
   tags: daemon
+
+- name: Check if fury.repo file exixts
+  stat:
+    path: /etc/yum.repos.d/fury.repo   
+  register: fury_status
+  tags:
+    - daemon
+    - clean-daemon 
+    - proxy
+    - clean-proxy
+
+- name: Remove fury.repo file if exists
+  file:
+    state: absent
+    path: /etc/yum.repos.d/fury.repo
+  when: fury_status.stat.exists
+  tags:
+    - daemon
+    - clean-daemon 
+    - proxy
+    - clean-proxy
  
 - name: Touch fury.repo file 
   copy:
@@ -82,6 +71,8 @@
   tags:
     - daemon
     - proxy
+    - clean-daemon
+    - clean-proxy
 
 - name: Remove rpm if alreday installed
   shell: rpm -e ovirt-imageio_1.5
@@ -89,6 +80,8 @@
   tags: 
     - daemon
     - proxy
+    - clean-daemon
+    - clean-proxy
 
 
 - name: Install rpm from Gemfury
@@ -513,14 +506,22 @@
   tags: 
     - daemon
     - clean-daemon
-  
-- name: Start Celery worker service
-  command: systemctl start ovirt_celery
-  tags: daemon
 
-- name: Enable Celery worker service
-  command: systemctl enable ovirt_celery
-  tags: daemon
+- name: Start ovirt-celery Service
+  service:
+    name: ovirt_celery
+    enabled: yes
+    state: started
+  tags: 
+    - daemon
+  
+# - name: Start Celery worker service
+#   command: systemctl start ovirt_celery
+#   tags: daemon
+
+# - name: Enable Celery worker service
+#   command: systemctl enable ovirt_celery
+#   tags: daemon
 
 - name: Unmounting existing mount path
   mount: 
@@ -543,7 +544,7 @@
     name: ovirt-imageio-proxy
     state: stopped
   ignore_errors: yes
-  register: ovirt-imageio-proxy
+  #register: ovirt-imageio-proxy
   tags: 
     - proxy
     - clean-proxy
@@ -670,15 +671,48 @@
     line: "{{ engine.stdout }} {{ fqdn.stdout }}"
   delegate_to: 127.0.0.1
   tags: proxy
-  
 
+
+- name: Check if trilio-plugin-resources directory exists
+  stat:
+    path: /usr/share/ovirt-engine/ui-plugins/trilio-plugin-resources
+  register: ui_status
+  tags:
+     - proxy
+     - clean-proxy
+
+- name: Remove directory trilio-plugin-resources if present
+  file:
+    state: absent
+    path: /usr/share/ovirt-engine/ui-plugins/trilio-plugin-resources
+  when: ui_status.stat.exists
+  tags:
+     - proxy
+     - clean-proxy
+
+
+- name: Check if trilio-plugin.json file exists
+  stat:
+    path: /usr/share/ovirt-engine/ui-plugins/trilio-plugin.json
+  register: file_status
+  tags:
+     - proxy
+     - clean-proxy
+
+- name: Remove trilio-plugin.json file if exists
+  file:
+    state: absent
+    path: /usr/share/ovirt-engine/ui-plugins/trilio-plugin.json
+  when: file_status.stat.exists
+  tags:
+     - proxy
+     - clean-proxy
 
 - name: create directory trilio-plugin-resources
   file:
     path: /usr/share/ovirt-engine/ui-plugins/trilio-plugin-resources
     state: directory
   tags: proxy
-
 
 
 - name: copy trilio-plugin-resources
