Remove previous host entry from etc/hosts of tvm for RHV 4.3

--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -359,6 +359,12 @@
   register: fqdn
   tags: daemon
 
+- name: Removing existing host entry from /etc/hosts before adding new
+  lineinfile:
+    dest: /etc/hosts
+    regexp: '^{{ host_ip }}'
+    state: absent
+  tags: daemon
 
 - name: Adding fqdn value to /etc/hosts of TVM
   lineinfile:
