Fix: RHV-780 changed the way host ip is getting added into TVR

--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -345,8 +345,8 @@
 
 - name: register target ip
   set_fact:
-    host_ip: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
-  register: host_ip
+    host_ip: "{{ ansible_default_ipv4.address }}"
+  #register: host_ip
   tags: daemon
 
 
