Added changes for removing roles with clean-proxy

--- a/create_roles.yml
+++ b/create_roles.yml
@@ -14,7 +14,9 @@
       username: "{{ rhv_username }}"
       password: "{{ rhv_password }}"
       ca_file: /etc/pki/ovirt-engine/ca.pem
-    tags: proxy
+    tags: 
+      - proxy
+      - clean-proxy
     
   - name: create trilioBackup role with login permissions
     ovirt_role:
@@ -83,3 +85,31 @@
         #- manipulate_status
         #- edit_network
     tags: proxy
+
+  - name: Remove TrilioBackup role with clean-proxy
+    ovirt_role:
+      auth: "{{ ovirt_auth }}"
+      name: TrilioBackup
+      state: absent
+    tags: clean-proxy
+
+  - name: Remove TrilioMonitor role with clean-proxy
+    ovirt_role:
+      auth: "{{ ovirt_auth }}"
+      name: TrilioMonitor
+      state: absent
+    tags: clean-proxy
+
+  - name: Remove TrilioRestore role with clean-proxy
+    ovirt_role:
+      auth: "{{ ovirt_auth }}"
+      name: TrilioRestore
+      state: absent
+    tags: clean-proxy
+
+  - name: Remove TrilioBackupAdministrator role with clean-proxy
+    ovirt_role:
+      auth: "{{ ovirt_auth }}"
+      name: TrilioBackupAdministrator
+      state: absent
+    tags: clean-proxy
